<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:text="@string/first_birthday"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_999999"
            android:text="@string/first_birthday_tips"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:background="@drawable/shape_black_half_2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColorHint="@color/color_999999"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:hint="@string/first_birthday_year"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="年"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_black_half_2"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColorHint="@color/color_999999"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:hint="@string/first_birthday_month"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="月"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_black_half_2"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColorHint="@color/color_999999"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:hint="@string/first_birthday_day"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="日"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableBottom="@drawable/selector_login_down"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:textColor="@drawable/selector_login"
        android:textSize="18sp"
        android:text="下一步"/>

</RelativeLayout>